<resources>
    <string name="app_name">popular-movies-stage1</string>

    <!-- Error messages-->
    <string name="error_message">Movie data not available. Please try again after sometime</string>

    <string name="movie_rating_header_text">Ratings:</string>
    <string name="movie_release_date_header_text">Release Date:</string>
    <string name="movie_overview_header_text">Overview:</string>
    <string name="movie_review_header_text">Reviews:</string>
    <string name="movie_trailer_header_text">Movie Trailers:</string>


    <!-- Movie Review List Item Resources-->
    <string name="movie_review_author_name_header_text">Written By:</string>
    <string name="movie_full_review_button">Full Movie Review</string>
    <string name="movie_reviews_not_available">Oops! Looks like no Reviews are available.</string>


    <!-- Movie Trailer List Item Resources-->
    <string name="movie_trailers_not_available">Oops! Looks like no trailers are available</string>

</resources>
